# molhiv

./: .gitignore  mlflow.db  pyproject.toml  run_training.sh
configs/: molhiv.yaml
nbs/: 1.Introduction.ipynb  10.mlflow.quickstart.ipynb  2.ENZYME.ipynb  3.MUTAG.ipynb  3.Planetoid.ipynb  4.Scaling.GNNs.ipynb  5.Interpretation.ipynb  6.Het.Graph.Learning.ipynb  7.Message.Passing.ipynb  8.ogbg.molhiv.ipynb  9.Reimplementation.GATLayer.ipynb  part1.data.exploration.ipynb  part1.initial.testing.ipynb
scripts/: training.py
slurm/: run_training.sh  run_training_on_gpu.sh
src/molhiv/: gatnn.py  ginenn.py  model.py  training.py  utils.py
src/molhiv/molhiv.egg-info/: PKG-INFO  SOURCES.txt
